
classDiagram
    class SnakeGame {
        -screen: Surface
        -clock: Clock
        -snake: List[Tuple[int, int]]
        -direction: str
        -food: Tuple[int, int]
        -score: int
        +__init__(self)
        +run(self)
        +handle_events(self)
        +update(self)
        +draw(self)
    }
    classDiagram
    class Snake {
        -body: List[Tuple[int, int]]
        -direction: str
        +__init__(self)
        +move(self)
        +grow(self)
        +check_collision(self)
    }
    class Food {
        -position: Tuple[int, int]
        +__init__(self)
        +generate_random_position(self)
    }

    SnakeGame --> Snake
    SnakeGame --> Food
